Modified ChangeLog. Now uses <image> Filter -> Path instead of
Modified ChangeLog.
Now uses <image> Filter -> Path instead of <image>Filter->Path to make it more visible.
Fixed a few broken links.
Add the original tutorial link to Custom_Brushes.

--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -153,7 +153,8 @@
 </p>
 <p>
   Select the original text layer (the one you added some color to) and do the Alpha to Selection trick again. 
-  Right click on the image and use <span class="filter">&lt;Image&gt;Select-&gt;Grow</span>. This will make the new selection larger by a number of pixels - 
+  Right click on the image and use <span class="filter">&lt;Image&gt; Select -&gt; Grow</span>. 
+  This will make the new selection larger by a number of pixels - 
   I used a value of 2 pixels. Once you have a selection, be sure to reselect the new layer (outline) so that you can 
   fill it (step 17). And below is what it looks like.
 </p>
@@ -221,7 +222,7 @@
 <p>
   This. Click inside the bezier path once you close it (close it by clicking one the first node). 
   This will create a selection. 
-  Use <span class="filter">&lt;Image&gt;Select-&gt;Feather</span> to feather (blur) the selection. I used a value of about 10 pixels.
+  Use <span class="filter">&lt;Image&gt; Select -&gt; Feather</span> to feather (blur) the selection. I used a value of about 10 pixels.
 </p>
 
 <h2>Step 23</h2>
@@ -282,7 +283,7 @@
 <p>
   With a little playing around you can get to this. I duplicated the rust layer and moved them (the original rust and the copy) down the stack until 
   the highlight and lowlight layers were above them. I also duplicated the original text layer, switched on Keep Trans., and used 
-  <span class="filter">&lt;Image&gt;Render-&gt;Clouds-&gt;Solid Noise</span> to add a bit of interest to the layer. 
+  <span class="filter">&lt;Image&gt; Render -&gt; Clouds -&gt; Solid Noise</span> to add a bit of interest to the layer. 
   Try using the Curves tool to help with this. 
   You may also notice that the outline layer is blurred. Sometimes this can help.
   The idea is, try stuff and find out.
