--- a/tutorials/Basic_Scheme/index.html
+++ b/tutorials/Basic_Scheme/index.html
@@ -150,7 +150,8 @@
 <p>
   produces a new gimp image of type RGB and size 100x150.
   <br /><br />
-   All teh functions of the PDB may be accessed through the DB browser that is available from the main menu through Xtns -&gt; DB BROWSER.... 
+   All the functions of the PDB may be accessed through the DB browser that is available from the main menu through 
+   <span class="filter"> Xtns -&gt; DB BROWSER</span>.... 
    E.g. the DB Browser entry for uni-img, which we will define in the example below looks like this:
 </p>
 <p class="images">
@@ -248,13 +249,14 @@
               SF-COLOR "color" '(255 127 0))
 </pre>
 <p>
-  To test the script save it in $HOME/.gimp-1.2/scripts/uni.scm and then select Xtns/Script-Fu/Refresh:
+  To test the script save it in $HOME/.gimp-1.2/scripts/uni.scm and then select <span class="filter">Xtns -&gt; Script-Fu -&gt; Refresh</span>:
 </p>
 <p class="images">
   <img src="refresh.png" alt=""/>
 </p>
 <p>
-  The script <b>Uniform image</b> should now appear in the pulldown menu Xtns/Script-Fu/Tutorials/Uniform image. 
+  The script <b>Uniform image</b> should now appear in the pulldown menu 
+  <span class="filter">Xtns -&gt; Script-Fu -&gt; Tutorials -&gt; Uniform image</span>. 
   Selecting this script results in the following popup:
 </p>
 <p class="images">
