--- a/tutorials/Borders_On_Selections/index.html
+++ b/tutorials/Borders_On_Selections/index.html
@@ -12,7 +12,7 @@
   Since Gimp is an image manipulation program and not a painting program it doesn't include tools to draw shapes like squares and circles.
   However this doesn't mean you can paint them, in fact there are some interesting options regarding this subject when it comes to the gimp.
   The solution is to use the selection stroking capabilities of the Gimp. This option can be accesed on the image menu (right button click 
-  on the image), by going to <span class="filter">&lt;Image&gt;Edit-&gt;Stroke</span>.
+  on the image), by going to <span class="filter">&lt;Image&gt; Edit -&gt; Stroke</span>.
 </p>
 
 <h2>Step 1</h2>
@@ -47,7 +47,8 @@
   <img src="img17_result.png" alt=""/>
 </p>
 <p>
-  When all the options are selected you can finally click on <span class="filter">&lt;Image&gt;Edit-&gt;Stroke</span>. Using a small brush and selecting a blue color here is 
+  When all the options are selected you can finally click on <span class="filter">&lt;Image&gt; Edit -&gt; Stroke</span>. 
+  Using a small brush and selecting a blue color here is 
   the result for the selection made above:
 </p>
 
