--- a/tutorials/Changing_Background_Color_1/index.html
+++ b/tutorials/Changing_Background_Color_1/index.html
@@ -47,8 +47,10 @@
   <img src="menu.png" alt=""/>
 </p>
 <p>
-  The first step is to activate the color to alpha plug-in. Its menu location is <span class="filter">&lt;image&gt;Filters-&gt;Colors-&gt;Color To Alpha</span>, 
-  where &lt;image&gt; means to right click on the image. If its grayed-out, it means that you have an indexed image. If its not there, upgrade your gimp to 1.2.x.
+  The first step is to activate the color to alpha plug-in. Its menu location is 
+  <span class="filter">&lt;image&gt; Filters -&gt; Colors -&gt; Color To Alpha</span>, 
+  where &lt;image&gt; means to right click on the image. If its grayed-out, 
+  it means that you have an indexed image. If its not there, upgrade your gimp to 1.2.x.
 </p>
 
 <h2>Step 2</h2>
