--- a/tutorials/Changing_Background_Color_2/index.html
+++ b/tutorials/Changing_Background_Color_2/index.html
@@ -9,8 +9,10 @@
   <img src="img1_initial.jpg" alt=""/>
 </p>
 <p>
-  Many times you have an image with a colored background, like the one below and you want to take out the background to use the image's subject in a composition.
-  With gimp there are many ways to achieve this, one of which is using a plug-in specifically designed for this: Changing Background Color 1.
+  Many times you have an image with a colored background, like the one below and you want to take 
+  out the background to use the image's subject in a composition.
+  With gimp there are many ways to achieve this, one of which is 
+  using a plug-in specifically designed for this: <a href="/tutorials/Changing_Background_Color_1/">Changing Background Color 1</a>.
 </p>
 
 <h2>Step 1</h2>
@@ -18,8 +20,10 @@
   <img src="img3_step1.png" alt=""/>
 </p>
 <p>
-  In this tutorial I explore the select by color option to remove a particular color from the image. The first step, after you have loaded the image of course,
-  is to click on the image with the right mouse button, and choose the option <span class="filter">&lt;Image&gt;Select-&gt;By Color</span> as seen above:
+  In this tutorial I explore the select by color option to remove a particular color from the image. 
+  The first step, after you have loaded the image of course,
+  is to click on the image with the right mouse button, and choose the option 
+  <span class="filter">&lt;Image&gt; Select -&gt; By Color</span> as seen above:
 </p>
 
 <h2>Step 2</h2>
@@ -27,11 +31,16 @@
   <img src="img4_step2.png" alt=""/>
 </p>
 <p>
-  After choosing that option a dialog window will appear. This window shows several options. The black square on the left side shows the current selection.
-  Anything that appears white is selected, anything that is black is not. When you strart using the dialog you will see what this means. On the right side
-  there are two options we will consider for the moment. The first one is the Selection Mode. We will use the add option, which means any color we click on
-  will be added to the selection. The other setting is the Fuzziness Threshold. When you click on a color, the higher this setting is, the more similar colors
-  to the one you clicked on will be selected. You can start by using the default setting and increasing it if you need to add more colors faster, or decrease
+  After choosing that option a dialog window will appear. This window shows several options. 
+  The black square on the left side shows the current selection.
+  Anything that appears white is selected, anything that is black is not. 
+  When you strart using the dialog you will see what this means. On the right side
+  there are two options we will consider for the moment. The first one is the Selection Mode. 
+  We will use the add option, which means any color we click on
+  will be added to the selection. The other setting is the Fuzziness Threshold. 
+  When you click on a color, the higher this setting is, the more similar colors
+  to the one you clicked on will be selected. You can start by using the default 
+  setting and increasing it if you need to add more colors faster, or decrease
   it if you're selecting more then you want. Select by color dialog 
 </p>
 
@@ -58,7 +67,7 @@
   <img src="img7_step5.png" alt=""/>
 </p>
 <p>
-  With the selection complete and with an alpha channel just choose from the image menu <span class="filter">&lt;Image&gt;Edit-&gt;Clear</span>, 
+  With the selection complete and with an alpha channel just choose from the image menu <span class="filter">&lt;Image&gt; Edit -&gt; Clear</span>, 
   and the image background will be gone.
 </p>
 
