--- a/tutorials/Creating_Icons/index.html
+++ b/tutorials/Creating_Icons/index.html
@@ -49,25 +49,29 @@
 
 <h2>Getting Started</h2>
 <p>
-  When you're ready to start, run GIMP by selecting <span class="filter">Applications-&gt;Graphics-&gt;GIMP</span> Image Editor from your menu panel, 
-  or typing <b>gimp</b> at the command line. If you haven't used GIMP before, the default window layout may be a little confusing. 
-  It's a lot like Photoshop and other similar applications, in that it uses a large number of dialogs. Select items from the 
-  <span class="filter">File-&gt;Dialogs</span> menu to choose which dialog windows you'd like to have open and which ones you'd like to have closed. 
-  For icon work, you may find it most convenient to use the main window, plus the palette and layers dialogs, and of course the actual image you're working on.
+  When you're ready to start, run GIMP by selecting <span class="filter">Applications -&gt; Graphics -&gt; GIMP</span> 
+  Image Editor from your menu panel, or typing <b>gimp</b> at the command line. If you haven't used GIMP before, 
+  the default window layout may be a little confusing. It's a lot like Photoshop and other similar applications, 
+  in that it uses a large number of dialogs. Select items from the 
+  <span class="filter">File -&gt; Dialogs</span> menu to choose which dialog windows you'd like to have open and which ones you'd like to have closed. 
+  For icon work, you may find it most convenient to use the main window, 
+  plus the palette and layers dialogs, and of course the actual image you're working on.
 </p>
 <p>
   To create a new image file, press <kbd>Ctrl+N</kbd>. Select a 48x48 pixel image, the standard Gnome icon size. 
   Because working on such a tiny pixmap requires a lot of detail, zoom in to work on a pixel-by-pixel level. 
-  Try <i>8:1</i> magnification (<span class="filter">&lt;Image&gt;View-&gt;Zoom-&gt;8:1</span>).
+  Try <i>8:1</i> magnification (<span class="filter">&lt;Image&gt; View -&gt; Zoom -&gt; 8:1</span>).
 </p>
 <p>
   At that magnification, however, you will begin to lose perspective. It's best to keep an additional window open with an unmagnified view, 
-  so you can see what your icon will look like. To do that, choose <span class="filter">&lt;Image&gt;View-&gt;New view</span> from the image context menu 
-  (the little arrow in the upper left side of the window). Use a <i>1:1</i> zoom on this view, so that you can paint at an <i>8:1</i> zoom and see the results immediately.
+  so you can see what your icon will look like. To do that, choose 
+  <span class="filter">&lt;Image&gt; View -&gt; New view</span> from the image context menu 
+  (the little arrow in the upper left side of the window). Use a <i>1:1</i> zoom on this view, 
+  so that you can paint at an <i>8:1</i> zoom and see the results immediately.
 </p>
 <p>
   Make sure to turn off the selection decorations on the <i>1:1</i> window. To do that, focus the window and press <kbd>Ctrl+T</kbd> or choose 
-  <span class="filter">&lt;Image&gt;View-&gt;Toggle selection</span>.
+  <span class="filter">&lt;Image&gt; View -&gt; Toggle selection</span>.
 </p>
 
 <h2>A Few Tricks</h2>
@@ -181,7 +185,8 @@
 </p>
 <p>
   If you want to create horizontal monitor lines on the screen, you can use the interlace effect. To do so, create a new layer above the current one. 
-  Render white horizontal lines with <span class="filter">&lt;Image&gt;Filters-&gt;Render-&gt;Pattern-&gt;Grid</span>. Make sure you set the layer mode to <i>Overlay</i>.
+  Render white horizontal lines with 
+  <span class="filter">&lt;Image&gt; Filters -&gt; Render -&gt; Pattern -&gt; Grid</span>. Make sure you set the layer mode to <i>Overlay</i>.
 </p>
 <p class="images">
   <img src="button.png" alt=""/>
@@ -212,7 +217,8 @@
 <p>
   You can make almost any image, especially a small one, easier to understand by adding black object outlines to enhance contrast. 
   To do this, you'll use the opposite of technique you used to create the television silhouette with its outline. First, 
-  right-click on the remote control layer and select <span class="filter">Layers-&gt;Alpha to selection</span>. Create a new empty layer below the remote control layer. 
+  right-click on the remote control layer and select <span class="filter">Layers -&gt; Alpha to selection</span>. 
+  Create a new empty layer below the remote control layer. 
   Increase the size of the selection by 1 pixel, and fill the selection with black.
 </p>
 <p class="images">
@@ -244,7 +250,8 @@
 <p>
   For extra realism you can add a TV glow. Create a layer above the screen, but below the remote. Create a rectangular selection of the screen, 
   then increase its size by 6 pixels and fill it with blue. Now, shrink that selection by 3 pixels and fill with white. 
-  Deselect the are with <kbd>Ctrl-Shift-A</kbd> and apply <span class="filter">&lt;Image&gt;Filter-&gt;Blur-&gt;Gaussian Blur RLE</span> by about 5 pixels. 
+  Deselect the are with <kbd>Ctrl-Shift-A</kbd> and apply 
+  <span class="filter">&lt;Image&gt; Filter -&gt; Blur -&gt; Gaussian Blur RLE</span> by about 5 pixels. 
   Now set the layer mode to <i>overlay</i>, creating the transparency effect.
 </p>
 
