--- a/tutorials/Custom_Brushes/index.html
+++ b/tutorials/Custom_Brushes/index.html
@@ -47,13 +47,14 @@
 </p>
 <p>
   The last step is to save our brush as a GIMP picture brush. The extension of this kind of brush is .GIH. So right click on the image, then choose 
-  <span class="filter">&lt;Image&gt;File-&gt;Save As....</span>
+  <span class="filter">&lt;Image&gt; File -&gt; Save As....</span>
   Because all brushes resides in the /gimp/brushes folder go to that folder and type in a name for the brush. For our example, the brush was named HAPPY.GIH
   <br />
   Then Save As Pixmap Brush Pipe dialog will ask you how you want to save the image. Since we have 3 layers make sure we put 3 in the Ranks edit box.
   You can also choose how you want the images to appear as you move the mouse aruond. In mose cases Random will do fine.
   <br />
-  NOTE: The Spacing (Percent) means how many spaces will occur before the next image is drawn. If the value is lower, then the image will be drawn more frequent.
+  NOTE: The Spacing (Percent) means how many spaces will occur before the next image is drawn. 
+  If the value is lower, then the image will be drawn more frequent.
   You can also adjust this value in the Brush dialog. 
 </p>
 
@@ -71,6 +72,11 @@
 <p class="images">
   <img src="thumb6.jpg" alt=""/>
 </p>
+
+<p>
+  The original tutorial can be found <a href="http://www.cubicdesign.com/">here</a>.
+</p>
+
 <!--#include virtual="/includes/wgo-tutorial-fini.xhtml" -->
     <div>
       <span id="footerleft">
