--- a/tutorials/Drawing_Shapes/index.html
+++ b/tutorials/Drawing_Shapes/index.html
@@ -30,7 +30,8 @@
 <h2>Let's get started!</h2>
 <p>
   First we must create a new image for our creation. Make the size 256x256 pixels and choose RGB for the type. The image background should be white. 
-  Open the Layers &amp; Channels -dialog with the right-button-menu: <span class="filter">&lt;Image&gt;Dialogs -&gt; Layers, Channels &amp; Paths...</span>
+  Open the Layers &amp; Channels -dialog with the right-button-menu: 
+  <span class="filter">&lt;Image&gt; Dialogs -&gt; Layers, Channels &amp; Paths...</span>
 </p>
 
 <h2>1. Left side</h2>
@@ -47,8 +48,8 @@
   <img src="left_side.gif" alt=""/>
 </p>
 <p>
-  <img src="bezier_tool.gif" alt=""/> Choose the Bezier-selection tool and make something like the side #1 on the blue cube, think about the perspective. 
-  (If this causes you trouble, don't worry. You will learn by experience).
+  <img src="bezier_tool.gif" alt=""/> Choose the Bezier-selection tool and make something like the side #1 on the blue cube, 
+  think about the perspective. (If this causes you trouble, don't worry. You will learn by experience).
   <br /><br />
   You can adjust the points' places if you can't get them right at the first try, see the  Bezier tutorial  for more information on that. 
   Your bezier should look something like the one on the right. 
@@ -80,8 +81,8 @@
   Now on to the right side, side #2. Create a new transparent layer and name it Right_side. 
   Use the Bezier Tool and try to make the right side of the cube and turn it into a selection.
   <br /><br />
-  Take the Gradient Tool again and, still with the same colors, make a gradient from farther up-left to near the selection's lower-right corner (see image on right). 
-  This way we get a darker gradient suitable for the shadow-side.
+  Take the Gradient Tool again and, still with the same colors, make a gradient from farther up-left 
+  to near the selection's lower-right corner (see image on right). This way we get a darker gradient suitable for the shadow-side.
   <br /><br />
   <b>Hint!</b> Be careful with the edges. You don't want to leave any holes so the background can be seen through... 
   It's better to overlap the lower layer a bit than leave a space between them. 
@@ -105,9 +106,10 @@
   <img src="finished_image.gif" alt=""/>
 </p>
 <p>
-  Now you have a cool image of a Light-Source-Shaded Cube. You can choose <span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span> to merge the layers togerher 
+  Now you have a cool image of a Light-Source-Shaded Cube. 
+  You can choose <span class="filter">&lt;Image&gt; Layers -&gt; Flatten Image</span> to merge the layers togerher 
   so you can save as jpeg or any other format than xcf. Or, better still, from the layers dialog, make the background invisible 
-  and choose <span class="filter">&lt;Image&gt;Layers-&gt;Merge Visible Layers</span> so you will have the background on a 
+  and choose <span class="filter">&lt;Image&gt; Layers -&gt; Merge Visible Layers</span> so you will have the background on a 
   separate layer and you can work further on it if you like.
   <br /><br />
   The next thing is to start using the geometrical shapes as building blocks to make things. And you can twist the beziers to make a bit more fancy stuff...
