--- a/tutorials/Quickmask/index.html
+++ b/tutorials/Quickmask/index.html
@@ -40,7 +40,7 @@
   After you click the red QuickMask button, a translucent red mask appears around your selection. This red mask represents the outside of your selection. 
   When you click the dashed QuickMask button to go back into normal selection mode, anything red will not be selected, and anything clear will be. 
   So, let's start playing with this mask. First, right click on the image and select 
-  <span class="filter">&lt;Image&gt;Filters-&gt;Distorts-&gt;Waves</span> from the menu. Apply the filter, 
+  <span class="filter">&lt;Image&gt; Filters -&gt; Distorts -&gt; Waves</span> from the menu. Apply the filter, 
   and watch what happens to the mask.
 </p>
 
@@ -49,7 +49,7 @@
   <img src="image.4.jpg" alt=""/>
 </p>
 <p>
-  The mask gets all wavy. Let's add one more effect: <span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Gaussian Blur (RLE)</span>.
+  The mask gets all wavy. Let's add one more effect: <span class="filter">&lt;Image&gt; Filters -&gt; Blur -&gt; Gaussian Blur (RLE)</span>.
 </p>
 
 <h2>Step 5</h2>
@@ -66,8 +66,8 @@
 </p>
 <p>
   See how the selection follows the mask? This is a powerful feature of QuickMask. You can use it to modify any existing selection, and you can even 
-  use it to create new selections. Our last step is to use <span class="filter">&lt;Image&gt;Select-&gt;Invert</span> and 
-  <span class="filter">&lt;Image&gt;Edit-&gt;Fill</span>. The result, a soft white fade into the background, is shown in the final step.
+  use it to create new selections. Our last step is to use <span class="filter">&lt;Image&gt; Select -&gt; Invert</span> and 
+  <span class="filter">&lt;Image&gt; Edit -&gt; Fill</span>. The result, a soft white fade into the background, is shown in the final step.
 </p>
 
 <h2>Final</h2>
@@ -83,21 +83,23 @@
   <img src="spread-11.png" alt=""/>
 </p>
 <p>
-  The above image used <span class="filter">&lt;Image&gt;Filters-&gt;Noise-&gt;Spread</span>, with horizontal and vertical settings at 11, to get the effect.
+  The above image used <span class="filter">&lt;Image&gt; Filters -&gt; Noise -&gt; Spread</span>, 
+  with horizontal and vertical settings at 11, to get the effect.
 </p>
 
 <p class="images">
   <img src="newsprint.png" alt=""/>
 </p>
 <p>
-  I used some blurring and the <span class="filter">&lt;Image&gt;Filters-&gt;Render-&gt;Newsprint</span> plugin to get this effect.
+  I used some blurring and the <span class="filter">&lt;Image&gt; Filters -&gt; Render -&gt; Newsprint</span> plugin to get this effect.
 </p>
 
 <p class="images">
   <img src="pixelize-10.png" alt=""/>
 </p>
 <p>
-  As in the tutorial, this one used Waves, but instead of blurring, I used <span class="filter">&lt;Image&gt;Filters-&gt;Blur-&gt;Pixelize</span> instead. 
+  As in the tutorial, this one used Waves, but instead of blurring, 
+  I used <span class="filter">&lt;Image&gt; Filters -&gt; Blur -&gt; Pixelize</span> instead. 
 </p>
 
 <p>
