--- a/tutorials/Sepia_Toning/index.html
+++ b/tutorials/Sepia_Toning/index.html
@@ -38,7 +38,7 @@
 </p>
 <p>
   You can compare the result we will get below to the GIMP's built-in script-fu for sepia toning 
-  (<span class="filter">&lt;Image&gt;Script-Fu-&gt;Decor-&gt;Old Photo</span>) as shown at right.
+  (<span class="filter">&lt;Image&gt; Script-Fu -&gt; Decor -&gt; Old Photo</span>) as shown at right.
   <br />
   Come back and compare to this when you get to the end of the tutorial.
 </p>
@@ -48,13 +48,16 @@
   <img src="image2.jpg" alt=""/>
 </p>
 <p>
-  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or <kbd>Ctrl+D</kbd>). 
+  Duplicate the original image (<span class="filter">&lt;Image&gt; Image -&gt; Duplicate</span> or <kbd>Ctrl+D</kbd>). 
   You may want to minimize the original now (or close it) so you don't choose it by mistake.
   <br /><br />
-  Using whatever technique you like best, convert the duplicate to B&amp;W. I recommend the channel mixer for best results, but you can also convert to grayscale 
-  (<span class="filter">&lt;Image&lt;Image-&gt;Mode-&gt;Grayscale</span>) or desaturate (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span>).
+  Using whatever technique you like best, convert the duplicate to B&amp;W. 
+  I recommend the channel mixer for best results, but you can also convert to grayscale 
+  (<span class="filter">&lt;Image&gt; Image -&gt; Mode -&gt; Grayscale</span>) or 
+  desaturate (<span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Desaturate</span>).
   <br /><br />
-  Whatever technique you use, convert the B&amp;W image back into RGB mode when you're done (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;RGB</span>).
+  Whatever technique you use, convert the B&amp;W image back into RGB mode when you're done 
+  (<span class="filter">&lt;Image&gt; Image -&gt; Mode -&gt; RGB</span>).
   <br />
   In this case I simply did a mode change to grayscale, then back to RGB mode.
 </p>
@@ -108,7 +111,7 @@
 <p>
   In the Layers dialog, click the Anchor button to anchor the pasted image into the layer mask.
   <br />
-  In the image window, invert the color (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Invert</span>). 
+  In the image window, invert the color (<span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Invert</span>). 
   This layer mask insures that the shadow parts of the image receive most of the color, 
   the mid-tones a little less, and the highlights little to none, much the way a print sepia-toned the traditional way would be.
 </p>
@@ -130,12 +133,13 @@
   <img src="image-curves.jpg" alt=""/>
 </p>
 <p>
-  Once you've got the base image, you can duplicate it (Ctrl+D), flatten the duplicate (<span class="filter">&lt;Image&gt;Layers-&gt;Flatten Image</span>) and then experiment with:
+  Once you've got the base image, you can duplicate it (Ctrl+D), flatten the duplicate 
+  (<span class="filter">&lt;Image&gt; Layers -&gt; Flatten Image</span>) and then experiment with:
 </p>
 <ul>
-  <li>Hue and Saturation (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Hue..Saturation</span>)</li>
-  <li>Color Balance (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Color Balance</span>)</li>
-  <li>Levels or Curves (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Levels|Curves</span>)</li>
+  <li>Hue and Saturation (<span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Hue..Saturation</span>)</li>
+  <li>Color Balance (<span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Color Balance</span>)</li>
+  <li>Levels or Curves (<span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Levels|Curves</span>)</li>
   <li>etc. etc!</li>
 </ul>
 <p>
@@ -170,8 +174,10 @@
   <img src="desaturate-final-446x512.jpg" alt=""/>
 </p>
 <p>
-  The one on the left was from a grayscale conversion (<span class="filter">&lt;Image&gt;Image-&gt;Mode-&gt;Grayscale</span>); the one on the right started as a desaturate 
-  (<span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Desaturate</span>). Notice that there is a lot more blue-channel noise in the right-hand one. 
+  The one on the left was from a grayscale conversion 
+  (<span class="filter">&lt;Image&gt; Image -&gt; Mode -&gt; Grayscale</span>); the one on the right started as a desaturate 
+  (<span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Desaturate</span>). 
+  Notice that there is a lot more blue-channel noise in the right-hand one. 
   This can add a nice "grain" effect (see tip above also) if that is what you are looking for. 
   For this particular image, I prefer the smoother tonality and darker contrast of the left-hand image.
 </p>
