--- a/tutorials/Tileable_Textures/index.html
+++ b/tutorials/Tileable_Textures/index.html
@@ -40,7 +40,8 @@
 
 <p>
   For example, lets choose the "Grunge 15" brush. Set its spacing to about 70 or so. 
-  Now choose a gradient from the the gradient selector (<span class="filter">&lt;Image&gt;Dialogs-&gt;Gradients</span>). Just about any of them will do fine. 
+  Now choose a gradient from the the gradient selector 
+  (<span class="filter">&lt;Image&gt; Dialogs -&gt; Gradients</span>). Just about any of them will do fine. 
   Pick one at random, you can get nice results from any of them. For this particular example, I used "Caribbean_Blues". 
 </p>
 
@@ -54,7 +55,7 @@
 </p>
 <p>
   The hard part is making the image tilable. The easiest way to do this is to offset your image by half its height, and half its width. 
-  Select <span class="filter">&lt;Image&gt;Filters-&gt;Map-&gt;Make Seamless</span>. Then choose the convient "x/2, y/2" option, and hit OK. 
+  Select <span class="filter">&lt;Image&gt; Filters -&gt; Map -&gt; Make Seamless</span>. Then choose the convient "x/2, y/2" option, and hit OK. 
   Your image will now show what used to be at its edges at the center of the image. 
   The secret to making tileable images is to make this transisiton smooth. 
 </p>
