--- a/tutorials/Blown_Out_Highlights/index.html
+++ b/tutorials/Blown_Out_Highlights/index.html
@@ -13,17 +13,21 @@
   <img src="after.jpg" alt=""/>
 </p>
 <p>
-  In this tutorial I'll show you how to salvage an image that has blown out highlights. This is a problem that is familiar to photographers shooting transparency film, 
-  which has an effective contrast range of about 5 stops. If you are not careful with your exposure you can easily lose all detail in your highlight areas, 
+  In this tutorial I'll show you how to salvage an image that has blown out highlights. 
+  This is a problem that is familiar to photographers shooting transparency film, 
+  which has an effective contrast range of about 5 stops. If you are not careful 
+  with your exposure you can easily lose all detail in your highlight areas, 
   with no way to get it back: they "blow out" to clear (white).
   <br /><br />
-  Many digital cameras have similar issues, especially consumer level ones. With these kinds of cameras it is worth paying attention to the old adage: "expose for the highlights". 
+  Many digital cameras have similar issues, especially consumer level ones. 
+  With these kinds of cameras it is worth paying attention to the old adage: "expose for the highlights". 
   I find that if I treat my digital camera as if I were shooting slide film the exposure rules are about the same.
 </p>
 
 <h2>The Procedure</h2>
 <p>
-  The basic technique is to graft matching areas of the image into the burned out parts using the clone tool and then to use several additional tools to blend the seams of the cloned areas.
+  The basic technique is to graft matching areas of the image into the burned out parts 
+  using the clone tool and then to use several additional tools to blend the seams of the cloned areas.
 </p>
 
 <h2>Step 1</h2>
@@ -33,11 +37,14 @@
 <p>
   Here is the original image.
   <br />
-  I saw my cat go up into a lemon tree. Thinking there might be an interesting shot there, I grabbed the camera and shot him from several angles, 
-  including this shot through a hole in the foliage. When I saw the image later on the monitor I realized what a nice natural three-dimensional frame I had.
+  I saw my cat go up into a lemon tree. Thinking there might be an interesting shot there, 
+  I grabbed the camera and shot him from several angles, 
+  including this shot through a hole in the foliage. When I saw the image later on the 
+  monitor I realized what a nice natural three-dimensional frame I had.
   <br /><br />
   The camera was set on automatic exposure. While it did a great job of exposing for the dark cat in the shade of the tree, 
-  there are several spots where specular reflections of the bright sunshine overhead blew out. The worst and most noticable is the one off of the leaf at the top of the image. 
+  there are several spots where specular reflections of the bright sunshine overhead blew out. 
+  The worst and most noticable is the one off of the leaf at the top of the image. 
   There are some less objectionable, but bothersome burned out areas to the lower right of the cat's face.
   <br /><br />
   Great image...could I rescue it?
@@ -59,11 +66,13 @@
   <img src="threshold-image.jpg" alt=""/>
 </p>
 <p>
-  The first step is to create a channel mask to be able to mask out parts of the image we don't want to affect. I'll use this for the main "pixel graft".
+  The first step is to create a channel mask to be able to mask out 
+  parts of the image we don't want to affect. I'll use this for the main "pixel graft".
   <br />
-  Duplicate the original image (<span class="filter">&lt;Image&gt;Image-&gt;Duplicate</span> or <kbd>Ctrl+D</kbd>).
+  Duplicate the original image (<span class="filter">&lt;Image&gt; Image -&gt; Duplicate</span> or <kbd>Ctrl+D</kbd>).
   <br />
-  In the duplicate, select <span class="filter">&lt;Image&gt;Image-&gt;Colors-&gt;Threshold</span>. In the threshold dialog box, drag to select the very right 
+  In the duplicate, select <span class="filter">&lt;Image&gt; Image -&gt; Colors -&gt; Threshold</span>. 
+  In the threshold dialog box, drag to select the very right 
   (extreme highlights) portion of the histogram. Alternatively, you can type in the lower bound, as I did here (250).
   <br /><br />
   This causes all the pixels in the image from 250-255 to go white and all the others to go black.
@@ -79,7 +88,8 @@
   <img src="image-channel.jpg" alt=""/>
 </p>
 <p>
-  Go back to the original image, and bring up the Layers and Channels dialog (<span class="filter">&lt;Image&gt;Layers-&gt;Layers, Channels &amp; Paths</span>, or <kbd>Ctrl+L</kbd>). 
+  Go back to the original image, and bring up the Layers and Channels dialog 
+  (<span class="filter">&lt;Image&gt; Layers -&gt; Layers, Channels &amp; Paths</span>, or <kbd>Ctrl+L</kbd>). 
   Click on the Channels tab and add a new channel by clicking on the new channel button.
 </p>
 
@@ -93,9 +103,10 @@
   <img src="layers2.jpg" alt=""/>
 </p>
 <p>
-  Go back to the threshold image, <span class="filter">&lt;Image&gt;Select-&gt;All</span> (Ctrl+A) and <span class="filter">&lt;Image&gt;Edit-&gt;Copy</span> (<kbd>Ctrl+C</kbd>).
+  Go back to the threshold image, <span class="filter">&lt;Image&gt; Select -&gt; All</span> 
+  (<kbd>Ctrl+A</kbd>) and <span class="filter">&lt;Image&gt; Edit -&gt; Copy</span> (<kbd>Ctrl+C</kbd>).
   <br />
-  <span class="filter">&lt;Image&gt;Edit-&gt;Paste</span> it into the original image (it should go into the new channel).
+  <span class="filter">&lt;Image&gt; Edit -&gt; Paste</span> it into the original image (it should go into the new channel).
   <br />
   Click on the Layers tab and anchor the floating selection.
   <br />
@@ -111,9 +122,11 @@
   Click on the Channels tab again, and right click on the new channel and select Channel to Selection (<kbd>Ctrl+S</kbd>). 
   You may want to also click on the eye beside the channel to turn off visibility of the channel.
   <br /><br />
-  Now feather the selection (<span class="filter">&lt;Image&gt;Select-&gt;Feather</span>). I used a value of 15 pixels or so in this case.
+  Now feather the selection (<span class="filter">&lt;Image&gt; Select -&gt; Feather</span>). 
+  I used a value of 15 pixels or so in this case.
   <br />
-  Finally (important!), click back on the Layers tab and select the Background layer, so the selection and further operations will apply to the image and not the channel mask.
+  Finally (important!), click back on the Layers tab and select the Background layer, 
+  so the selection and further operations will apply to the image and not the channel mask.
 </p>
 
 <h2>Step 7</h2>
@@ -129,13 +142,15 @@
   A description of how to use this tool is beyond the scope of this document 
   (see the <a href="http://gimp-savvy.com/BOOK/index.html">GIMP savvy</a> to find out more about this tool).
   <br /><br />
-  I cloned from the light part of the leaf just beyond the dark band to the right of the blown out area. This gave me a similar light-dark-light transition. 
-  You can see the clone tool options and the brush (<span class="filter">&lt;Image&gt;Dialogs-&gt;Brushes</span>) I selected (at right).
+  I cloned from the light part of the leaf just beyond the dark band to the right of the blown out area. 
+  This gave me a similar light-dark-light transition. 
+  You can see the clone tool options and the brush 
+  (<span class="filter">&lt;Image&gt; Dialogs -&gt; Brushes</span>) I selected (at right).
   <br />
-  Zoom in and clone until you have the area filled with a realistic facimile of the missing detail. Most likely it will have a noticable transition around the edges. 
-  That's OK, we'll fix that up next.
+  Zoom in and clone until you have the area filled with a realistic facimile of the missing detail. 
+  Most likely it will have a noticable transition around the edges. That's OK, we'll fix that up next.
   <br />
-  <span class="filter">&lt;Image&gt;Select-&gt;None</span> and zoom out to inspect your work.
+  <span class="filter">&lt;Image&gt; Select -&gt; None</span> and zoom out to inspect your work.
 </p>
 
 <h2>Step 8</h2>
@@ -158,7 +173,8 @@
   <img src="image5.jpg" alt=""/>
 </p>
 <p>
-  This step is where the most difficult work occurs. I must by necessity abbreviate this step, since it involves iterations of applying the following tools:
+  This step is where the most difficult work occurs. I must by necessity abbreviate this step, 
+  since it involves iterations of applying the following tools:
 </p>
 <ul>
   <li><img src="smudge.jpg" alt=""/> smudge</li>
@@ -176,7 +192,8 @@
 </p>
 <ul>
   <li>Make small changes so you can undo easily without having to redo a lot of work.</li>
-  <li>Experiment with the tool options, especially opacity, rate and pressure (double-click on a tool to see the tool options). Some examples I used here are shown at right.</li>
+  <li>Experiment with the tool options, especially opacity, rate and pressure 
+  (double-click on a tool to see the tool options). Some examples I used here are shown at right.</li>
   <li>Vary your brushes! You generally want a nice feathered edge for smoothing seams. Some examples I used here are shown at right.</li>
   <li>When using the airbrush, use the color picker first to sample a pixel. I average a pixel value as shown in the color picker options, right.</li>
   <li>Periodically, zoom in and out to examine your work. The zoom keys are incredibly handy for this ("=" key to zoom in, "-" key to zoom out).
