--- a/tutorials/Red_Eye_Removal/index.html
+++ b/tutorials/Red_Eye_Removal/index.html
@@ -22,7 +22,7 @@
 <p>
    I zoomed in on the image, 4:1 ratio, as this is almost pixel by pixel work. I ended up using the 5 x 5 fuzzy brush that came with the GIMP tarball.
    As usual, your choice depends on the resolution of your image. A fuzzy brush is highly recommended. On this web sized image, the 3 x 3 fuzzy brush 
-   didn't work fast enough. As always, you can <span class="filter">&lt;Image&gt;Edit-&gt;Undo</span> until you make the right selections.
+   didn't work fast enough. As always, you can <span class="filter">&lt;Image&gt; Edit -&gt; Undo</span> until you make the right selections.
 </p>
 
 <h2>Step 2</h2>
@@ -43,15 +43,21 @@
   <img src="burnopts-sm.png" alt=""/>
 </p>
 <p>
-   Make certain you have a good brush selected (for this image I used the 5 x 5 fuzzy) Then select the Dodge and Burn Tool. <img src="dodgeorburn.png" alt=""/> 
-   Double click on the button to get the Tool Options dialog. My dialog defaults to dodge and midtones, for this project, choose burn and hightlights (as illustrated).
-   Touch all of the red in the eyes with the burn tool. I think that I used the burn tool on the midtones just a little bit also. The GIMP doesn't have 
-   a magic button to fix red eyes with, but it has the tools. It has been my experience that each image is slightly different and I sort of like the control 
-   that GIMP gives you ...
+   Make certain you have a good brush selected (for this image I used the 5 x 5 fuzzy) 
+   Then select the Dodge and Burn Tool. <img src="dodgeorburn.png" alt=""/> 
+   Double click on the button to get the Tool Options dialog. 
+   My dialog defaults to dodge and midtones, for this project, 
+   choose burn and hightlights (as illustrated).
+   Touch all of the red in the eyes with the burn tool. 
+   I think that I used the burn tool on the midtones just a little bit also. 
+   The GIMP doesn't have a magic button to fix red eyes with, but it has the tools. 
+   It has been my experience that each image is slightly different and I sort of like the control that GIMP gives you ...
    <br />
-   tigert warned that this method can leave the white spots in the eyes slightly green. I have found this to be true, however so far it hasn't been enough green 
-   to worry about. Given a photo where the green will make a difference, you can use the same tool combination on the green channel, just move the opacity slider 
-   to a smaller percentage. <span class="filter">&lt;Image&gt;Edit-&gt;Undo</span> until you get it right.
+   tigert warned that this method can leave the white spots in the eyes slightly green. I have found this to be true, 
+   however so far it hasn't been enough green 
+   to worry about. Given a photo where the green will make a difference, 
+   you can use the same tool combination on the green channel, just move the opacity slider 
+   to a smaller percentage. <span class="filter">&lt;Image&gt; Edit -&gt; Undo</span> until you get it right.
 </p>
 
 <h2>Final</h2>
@@ -61,13 +67,17 @@
 <p>
    ... looking so much better!
    <br />
-   The very best fix, of course would be to prevent it from happening. Due to the nature of the problem, my guess is that it will be the same people over and over
-   again with this problem. Some personalities have no problem looking deeply into the camera lens (like this beautiful baby for instance) and maintaining the gaze
-   through the flash. My guess is that as soon as these people know what is going on, they can fix it themselves.
+   The very best fix, of course would be to prevent it from happening. 
+   Due to the nature of the problem, my guess is that it will be the same people over and over
+   again with this problem. Some personalities have no problem looking deeply into the camera lens 
+   (like this beautiful baby for instance) and maintaining the gaze
+   through the flash. My guess is that as soon as these people know what is going on, 
+   they can fix it themselves.
    <br />
-   Other personalities have other portrait problems. There is a small handful of people who have no problem looking into the camera lens, but anticipate the flash 
-   and blink at the wrong moment. This causes the portrait to look like the object is starting to sneeze. (this is what happens to me) If you know of a method to 
-   prevent this, please email me.
+   Other personalities have other portrait problems. There is a small handful of people 
+   who have no problem looking into the camera lens, but anticipate the flash 
+   and blink at the wrong moment. This causes the portrait to look like the object is starting to sneeze. 
+   (this is what happens to me) If you know of a method to prevent this, please email me.
 </p>
 
 <p class="images">
