--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <title>GIMP - The GNU Image Manipulation Program</title>
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
-
+<p>
+  Welcome to The New GIMP Web Site.  This site attempts to help you to
+  use The GIMP.  The GIMP (GNU/Image Manipulation Program) is a very nice
+  graphics manipulation application that works on many operating systems,
+  in many languages, on many file formats and is used for a variety of
+  computer imagery purposes.  Hopefully, you will find what you need here.
+  Grab a properly chilled beverage and enjoy.
+</p>
 <!--#include virtual="/includes/news.inc" -->
 
 <!--#include virtual="/includes/wgo-page-fini.xhtml" -->
